[gd_scene load_steps=11 format=3 uid="uid://ceulvgal4xivv"]

[ext_resource type="PackedScene" uid="uid://bx0no8s34pqqc" path="res://boss.tscn" id="1_3jtbm"]
[ext_resource type="Script" path="res://main_scene.gd" id="1_u7mxa"]
[ext_resource type="PackedScene" uid="uid://c83xt0ctyo2vf" path="res://truck.tscn" id="2_bd7g8"]
[ext_resource type="Texture2D" uid="uid://b50jbf5i7dd3y" path="res://assets/bg/background-v1.png" id="3_bot4r"]
[ext_resource type="PackedScene" uid="uid://by2nexvrd42jr" path="res://ui_1.tscn" id="3_w4b3k"]
[ext_resource type="Script" path="res://ArrowMechanics.gd" id="6_fpwrq"]
[ext_resource type="PackedScene" uid="uid://qlepyyv8q0bw" path="res://accuracy_bar.tscn" id="6_shxs8"]
[ext_resource type="AudioStream" uid="uid://cr8tjvyn7sfbw" path="res://sounds/lofiDemo.wav" id="7_rdenr"]
[ext_resource type="FontFile" uid="uid://bobab63yfochu" path="res://assets/fonts/CartoonFun-rg0zO.ttf" id="8_wv1xn"]
[ext_resource type="AudioStream" uid="uid://d2eojjbym4llw" path="res://sounds/TruckReverse.wav" id="9_o22m3"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_u7mxa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ui_1" parent="CanvasLayer" instance=ExtResource("3_w4b3k")]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bot4r")

[node name="Truck" parent="." instance=ExtResource("2_bd7g8")]
position = Vector2(1553, 607)

[node name="Boss" parent="." instance=ExtResource("1_3jtbm")]
position = Vector2(1217, 705)

[node name="AccuracyBar" parent="." instance=ExtResource("6_shxs8")]
position = Vector2(64, 840)
scale = Vector2(1.65, 1)

[node name="ArrowMechanics" type="Node2D" parent="."]
script = ExtResource("6_fpwrq")

[node name="FeedbackLabel" type="Label" parent="."]
offset_left = 992.0
offset_top = 312.0
offset_right = 1224.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("8_wv1xn")
theme_override_font_sizes/font_size = 45
text = "Perfect"

[node name="PercentLabel" type="Label" parent="."]
offset_left = 936.0
offset_top = 160.0
offset_right = 1288.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 50
text = "Accuracy 93 %"

[node name="LevelCompLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 248.0
offset_right = 776.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(0, 0.552941, 0.141176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("8_wv1xn")
theme_override_font_sizes/font_size = 55
text = "Level Completed!"

[node name="LevelFailLabel" type="Label" parent="."]
offset_left = 254.0
offset_top = 254.0
offset_right = 686.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("8_wv1xn")
theme_override_font_sizes/font_size = 55
text = "Level Failed"

[node name="ReverseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_o22m3")
volume_db = 5.0

[node name="Track" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rdenr")
